# qa-scribe

./: .gitignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  drizzle.config.ts  electrobun.config.ts  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
crates/qa-scribe-core/: Cargo.toml
crates/qa-scribe-core/examples/: generate_startup_fixture.rs
crates/qa-scribe-core/src/: error.rs  lib.rs
crates/qa-scribe-core/src/ai/: executor.rs  mod.rs  tests.rs
crates/qa-scribe-core/src/ai/stream/: claude.rs  codex.rs  mod.rs  plain.rs
crates/qa-scribe-core/src/attachments/: mod.rs  tests.rs
crates/qa-scribe-core/src/domain/: ai_run.rs  attachment.rs  draft.rs  entry.rs  finding.rs  mod.rs  session.rs  settings.rs  validation.rs
crates/qa-scribe-core/src/export/: mod.rs
crates/qa-scribe-core/src/generation/: html.rs  html_projection.rs  mod.rs  preferences.rs  prompt.rs  response.rs  test_support.rs  tests.rs  workflow.rs
crates/qa-scribe-core/src/generation/html/: tests.rs
crates/qa-scribe-core/src/generation/response/: images.rs
crates/qa-scribe-core/src/generation/tests/: images.rs  prompt_and_projection.rs  response_parser.rs
crates/qa-scribe-core/src/generation/workflow/: tests.rs
crates/qa-scribe-core/src/services/: mod.rs  session_rows.rs  session_service.rs
crates/qa-scribe-core/src/services/session_service/: attachments.rs  drafts.rs  entries.rs  findings.rs  generation.rs  rich_body.rs  sessions.rs  settings.rs
crates/qa-scribe-core/src/storage/: mod.rs  schema.rs  tests.rs
crates/qa-scribe-core/tests/: session_storage.rs
crates/qa-scribe-core/tests/session_storage/: ai_run_lifecycle.rs  attachments.rs  generation_and_relationships.rs  helpers.rs  lifecycle_and_validation.rs  migrations.rs  migrations_indices.rs  not_found_references.rs
crates/qa-scribe-core/tests/session_storage/attachments/: reconciliation_and_session_deletion.rs  validation_and_integrity.rs
docs/: ci.md  (+23 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: default.toml
src-tauri/permissions/autogenerated/: cancel_ai_action_job.toml  copy_attachment_image_to_clipboard.toml  copy_html_to_clipboard.toml  create_draft.toml  create_entry.toml  create_finding.toml  create_session.toml  delete_attachment.toml  delete_draft.toml  delete_finding.toml  delete_session.toml  get_ai_action_job_status.toml  get_attachment_preview_data_url.toml  get_provider_status.toml  import_clipboard_screenshot.toml  list_active_ai_action_jobs.toml  list_draft_library.toml  list_drafts.toml  list_entries.toml  list_finding_library.toml  list_recent_sessions.toml  open_session_note_state.toml  read_clipboard_image_data_url.toml  refresh_provider_status.toml  reopen_session.toml  start_ai_action_job.toml  update_draft.toml  update_entry.toml  update_finding.toml  update_session.toml
src-tauri/src/: commands.rs  jobs.rs  main.rs  path_access.rs  process_io.rs  provider_command.rs  settings.rs  specta_bindings.rs
src-tauri/src/commands/: ai.rs  entries.rs  error.rs  files.rs  findings.rs  generation.rs  providers.rs  sessions.rs  settings.rs  status.rs
src-tauri/src/commands/ai/: action.rs  job_events.rs  job_runner.rs  preferences.rs  provider_execution.rs  report.rs  selection.rs  stream_parser.rs  streaming_exec.rs  tests.rs  types.rs
src-tauri/src/commands/providers/: cache.rs  defaults.rs  detection.rs  models.rs  probe.rs  rollout.rs  tests.rs  types.rs
src-tauri/src/jobs/: control.rs  tests.rs
src-tauri/src/provider_command/: tests.rs
(+347 files in other folders)
