[workspace]
members = [
  "crates/qa-scribe-app",
  "crates/qa-scribe-core",
  "src-tauri",
]
resolver = "3"

[workspace.package]
version = "0.6.2"
edition = "2024"
license = "MIT"
authors = ["qa-scribe contributors"]

[workspace.dependencies]
qa-scribe-core = { path = "crates/qa-scribe-core" }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
base64 = "0.22.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
specta-typescript = "0.0.12"
tauri = "2.11.2"
tauri-build = "2.6.2"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
thiserror = "2.0.18"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
