[package]
name = "qa-scribe-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tauri desktop shell for qa-scribe."

[build-dependencies]
tauri-build.workspace = true

[dependencies]
base64.workspace = true
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
qa-scribe-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-clipboard-manager = "2.3.2"
uuid.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
