[package]
name = "qa-scribe-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tauri desktop shell for qa-scribe."

[build-dependencies]
tauri-build.workspace = true

[dependencies]
base64.workspace = true
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
json5 = "0.4"
qa-scribe-core.workspace = true
serde.workspace = true
serde_json.workspace = true
specta.workspace = true
specta-typescript.workspace = true
tauri.workspace = true
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-wdio = { version = "1.2.0", optional = true }
tauri-plugin-wdio-webdriver = { version = "1.2.0", optional = true }
tauri-specta.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[dev-dependencies]
rusqlite.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
e2e = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]
