[package]
name = "qa-scribe-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core domain and service layer for qa-scribe."

[dependencies]
base64.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
specta.workspace = true
thiserror.workspace = true
uuid.workspace = true
